Exsample in html

--- a/HtmlCSS_Exsample/Html/HtmlExsample.html
+++ b/HtmlCSS_Exsample/Html/HtmlExsample.html
@@ -24,10 +24,24 @@
             <textarea name="Comment" cols="50"
                       rows="5" placeholder="Enter your idea"></textarea>
 
-            <p>Please selesct your favourite football player ?</p>
+            <p>Please selesct your favourite football player?</p>
             <input type="radio" name="players" value="Ronaldo" />Ronaldo
             <input type="radio" name="players" value="Salah" />Salah
             <input type="radio" name="players" value="Messi" />Messi
+
+            <p>Please selesct your favourite football team player?</p>
+            <input type="checkbox" name="cup" value="Real Madrid" />Real Madrid
+            <input type="checkbox" name="cup" value="Liverpool" />Liverpool
+            <input type="checkbox" name="cup" value="Barca" /> Barca
+
+            <p>Please selesct your favourite football cup?</p>
+            <select name="cup">
+                <option value="Real Madrid">Real Madrid</option>
+                <option value="Liverpool" selected>Liverpool</option>
+                <option value="Barca">Barca</option>
+            </select>
+
+
 
         </form>
     </body>
