html table exsample

--- a/HtmlCSS_Exsample/Html/HtmlTable.html
+++ b/HtmlCSS_Exsample/Html/HtmlTable.html
@@ -7,7 +7,37 @@
 
     <body>
 
+        <table border="1">
+            <thead>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Number</th>
+            </thead>
 
+            <tbody>
+                <tr>
+                    <td>Abror</td>
+                    <td>Abror01@gmail.com</td>
+                    <td>+998936074554</td>
+                </tr>
+                <tr>
+                    <td>Jamshid</td>
+                    <td>Jamshid@gmail.com</td>
+                    <td>+998940222332</td>
+                </tr>
+                <tr>
+                    <td>Javlon</td>
+                    <td>Javlon@gmail.com</td>
+                    <td>+998970704554</td>
+                </tr>
+                <tr>
+                    <td>Muhammadali</td>
+                    <td>Muhammadali@gmail.com</td>
+                    <td>+998949335203</td>
+                </tr>
+            </tbody>
+
+        </table>
 
     </body>
 
