--- a/HtmlCSS_Exsample/MyFirstWebsiteHtml/Index.html
+++ b/HtmlCSS_Exsample/MyFirstWebsiteHtml/Index.html
@@ -9,15 +9,22 @@
             <li><a href="#">Contact</a></li>
         </ul>
         <h1>My Website</h1>
-        <hr/>
-        <img src="C:\Desktopp\Pictures\Abror3.jpg" 
-             width="250px"  height="250px" alt="img_me"/>
-        <hr/>
+        <hr />
+        <img src="C:\Desktopp\Pictures\Abror3.jpg"
+             width="250px" height="250px" alt="img_me" />
+        <hr />
         <h2>Where your can find me?</h2>
         <hr />
-        <img src="https://img.freepik.com/free-vector/instagram-icon_1057-2227.jpg" 
+        <img src="https://img.freepik.com/free-vector/instagram-icon_1057-2227.jpg"
              width="200px" height="200px" alt="Instagram" />
         <h3>Instagram</h3>
+        <hr />
+        <p>
+            <h2>The best coffee in the world</h2>
+        </p>
+        <img src="https://www.rush.edu/sites/default/files/styles/386x217/public/media-images/Coffee_WebFeature.png?itok=gxteJ01c"
+             width="250px" height="200px" alt="Health Benefits of Coffee | Rush System" />
+
 
 
     </body>
