style exsample in css

--- a/HtmlCSS_Exsample/CSS/CssTutorial.html
+++ b/HtmlCSS_Exsample/CSS/CssTutorial.html
@@ -6,7 +6,15 @@
     </head>
     <body>
         <div class="box">
-            <h1>Hello world</h1>
+            <p>Different Categories</p>
+            <ul>
+                <li>Fruit</li>
+                <li>Vegetables</li>
+                <li>Car</li>
+            </ul>
+
+
+            <!--<h1>Hello world</h1>
             <p>
                 lorem Ipsum is simply dummy text of the printing
                 and typesetting industry. Lorem Ipsum has been the industry's
@@ -22,7 +30,7 @@
             </p>
             <button class="btn">
                 Read More
-            </button>
+            </button>-->
         </div>
         
         
