--- a/HtmlCSS_Exsample/CSS/CssTutorial.html
+++ b/HtmlCSS_Exsample/CSS/CssTutorial.html
@@ -6,12 +6,21 @@
     </head>
     <body>
         <div class="box">
-            <p>Different Categories</p>
-            <ul>
+
+            <form>
+                Name: <input type="text" placeholder="Enter you Name"/> 
+                SurName: <input type="text" placeholder="Enter you SurName"/> 
+                Email: <input type="email" placeholder="Enter you Email"/> 
+            </form>
+
+
+
+           <!-- <p>Different Categories</p>-->
+            <!--<ul>
                 <li>Fruit</li>
                 <li>Vegetables</li>
                 <li>Car</li>
-            </ul>
+            </ul>-->
 
 
             <!--<h1>Hello world</h1>
